<resources>
    <string name="app_name">Wallpaper</string>

    <string name="search_photo">Поиск фото</string>
    <string name="wallpaper">УСТАНОВИТЬ ОБОИ</string>
    <string name="by_ksenia_ladoshko">by Ksenia Ladoshko</string>
    <string name="animals">Animals</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="nature">Nature</string>
    <string name="textures">Textures</string>
    <string name="_3d">3D</string>
    <string name="search">search</string>
</resources>